@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-13T16:01:34Z",
-  "count_outdated" : 3800,
-  "uniques_outdated" : 1726,
+  "timestamp" : "2024-02-14T16:01:36Z",
+  "count_outdated" : 3802,
+  "uniques_outdated" : 1727,
   "count" : 3841,
   "uniques" : 1754,
   "clones" : [
-    {
-      "timestamp": "2024-01-31T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-02-01T00:00:00Z",
       "count": 2,
